--- a/dasUberEnduroApplicationen/build.gradle
+++ b/dasUberEnduroApplicationen/build.gradle
@@ -5,7 +5,7 @@ repositories {
 }
 
 dependencies {
-   compile files('../json-20160810.jar')
+   compile files('jar/json-20160810.jar')
    testCompile 'junit:junit:4.12'
 }
 
