--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-"race type" : "maraton"
+	"race type" : "varvlopp",
+	"output" : "dasUberEnduroApplicationen/mapp_med_shit/resultat.txt",
+	"name file" : "dasUberEnduroApplicationen/mapp_med_shit/namnfil.txt",
+	"start files" : ["dasUberEnduroApplicationen/mapp_med_shit/starttider.txt"],
+	"finish files" : ["dasUberEnduroApplicationen/mapp_med_shit/maltider.txt"]
 }
