Fixade tillbaka commandline inför release

--- a/config.json
+++ b/config.json
@@ -1,7 +1,18 @@
 {
 	"race type" : "varvlopp",
-	"output" : "dasUberEnduroApplicationen/mapp_med_shit/resultat.txt",
+	"outputs" : [
+		{
+			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat_unsorted.txt",
+			"sort" : false,
+			"html" : false
+		},
+		{
+			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat_sorted.txt",
+			"sort" : true
+		}
+	],
 	"name file" : "dasUberEnduroApplicationen/mapp_med_shit/namnfil.txt",
-	"start files" : ["dasUberEnduroApplicationen/mapp_med_shit/starttider.txt"],
-	"finish files" : ["dasUberEnduroApplicationen/mapp_med_shit/maltider.txt"]
+	"start files" : [],
+	"finish files" : ["dasUberEnduroApplicationen/mapp_med_shit/maltider.txt"],
+	"group start" : "03.00.00"
 }
