Story 28: HTML resultat m.h.a. config

--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
 	"race type" : "varvlopp",
 	"outputs" : [
 		{
-			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat_unsorted.txt",
+			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat.html",
 			"sort" : false,
-			"html" : false
+			"html" : true
 		},
 		{
 			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat_sorted.txt",
