Story 28: Snyggare färger till HTML resultat

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"race type" : "varvlopp",
+	"race type" : "maraton",
 	"outputs" : [
 		{
 			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat.html",
