Story 25: Added stipulated time to configReader

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"race type" : "maraton",
+	"race type" : "varvlopp",
 	"outputs" : [
 		{
 			"file" : "dasUberEnduroApplicationen/mapp_med_shit/resultat.html",
@@ -14,5 +14,6 @@
 	"name file" : "dasUberEnduroApplicationen/mapp_med_shit/namnfil.txt",
 	"start files" : [],
 	"finish files" : ["dasUberEnduroApplicationen/mapp_med_shit/maltider.txt"],
-	"group start" : "03.00.00"
+	"group start" : "03.00.00",
+	"stipulated time" : "01.00.00"
 }
