--- a/AcT/Iteration3/acceptanstest19a/config.json
+++ b/AcT/Iteration3/acceptanstest19a/config.json
@@ -2,9 +2,23 @@
 	"race type" : "etapplopp",
 	"name file" : "namnfil.txt",
 	"number of etapps": 1,
-	"start files" : [{
-		"etapp": 1, "file": "starttider1.txt"}],
-	"finish files" : [{
-		"etapp": 1, "file": "maltider1.txt"}]
+	"etapper" : [
+		{
+			"minimum time" : "00.15.00",
+			"multiplier" : 1
+		}
+	],
+	"start files" : [
+		{
+			"etapp": 1,
+			"file": "starttider1.txt"
+		}
+	],
+	"finish files" : [
+		{
+			"etapp": 1,
+			"file": "maltider1.txt"
+		}
+	]
 	
 }
