Fixed acceptancetests (almost) for varvlopp

--- a/AcT/Iteration3/acceptanstest23a/config.json
+++ b/AcT/Iteration3/acceptanstest23a/config.json
@@ -2,6 +2,16 @@
 	"race type" : "etapplopp",
 	"name file" : "namnfil.txt",
 	"number of etapps": 2,
+	"etapper" : [
+		{
+			"minimum time" : "00.15.00",
+			"multiplier" : 1
+		},
+		{
+			"minimum time" : "00.10.00",
+			"multiplier" : 1
+		}
+	],
 	"start files" : [
 		{"etapp": 1, "file": "starttider1.txt"},
 		{"etapp": 2, "file": "starttider2.txt"}],
